crates/pamoja-ffi/include/pamoja.h


typedef enum {
  PamojaStatus_Ok = 0,
  PamojaStatus_Transport = 1,
  PamojaStatus_Io = 2,
  PamojaStatus_Codec = 3,
  PamojaStatus_Closed = 4,
  PamojaStatus_Unsupported = 5,
  PamojaStatus_InvalidArgument = 6,
  PamojaStatus_Other = 7,
  PamojaStatus_Panic = 8,
  PamojaStatus_Auth = 9,
} PamojaStatus;
typedef struct PamojaBuffer PamojaBuffer;
typedef struct PamojaCanFrame PamojaCanFrame;
typedef struct PamojaCobsDecoder PamojaCobsDecoder;
typedef struct PamojaFrames PamojaFrames;
typedef struct PamojaModbusFrame PamojaModbusFrame;
typedef struct PamojaRegisters PamojaRegisters;
typedef struct PamojaSlipDecoder PamojaSlipDecoder;
PamojaStatus pamoja_can_frame_new(uint32_t id,
                                  bool extended,
                                  const uint8_t *data,
                                  uintptr_t data_len,
                                  PamojaCanFrame **out_frame);
PamojaStatus pamoja_can_frame_fd(uint32_t id,
                                 bool extended,
                                 const uint8_t *data,
                                 uintptr_t data_len,
                                 PamojaCanFrame **out_frame);
PamojaStatus pamoja_can_frame_remote(uint32_t id,
                                     bool extended,
                                     uintptr_t len,
                                     PamojaCanFrame **out_frame);
uint32_t pamoja_can_frame_id(const PamojaCanFrame *frame);
bool pamoja_can_frame_is_extended(const PamojaCanFrame *frame);
uint16_t pamoja_modbus_crc16(const uint8_t *bytes, uintptr_t bytes_len);
PamojaStatus pamoja_modbus_read_coils(uint8_t address,
                                      uint16_t start,
                                      uint16_t count,
                                      PamojaBuffer **out_buffer);
PamojaStatus pamoja_modbus_read_discrete_inputs(uint8_t address,
                                                uint16_t start,
                                                uint16_t count,
                                                PamojaBuffer **out_buffer);
PamojaStatus pamoja_modbus_read_holding_registers(uint8_t address,
                                                  uint16_t start,
                                                  uint16_t count,
                                                  PamojaBuffer **out_buffer);
PamojaStatus pamoja_modbus_read_holding_registers_reply(uint8_t address,
                                                        const uint16_t *values,
                                                        uintptr_t values_len,
                                                        PamojaBuffer **out_buffer);
PamojaStatus pamoja_modbus_read_input_registers_reply(uint8_t address,
                                                      const uint16_t *values,
                                                      uintptr_t values_len,
                                                      PamojaBuffer **out_buffer);
PamojaStatus pamoja_modbus_read_input_registers(uint8_t address,
                                                uint16_t start,
                                                uint16_t count,
                                                PamojaBuffer **out_buffer);
PamojaStatus pamoja_modbus_write_single_coil(uint8_t address,
                                             uint16_t coil,
                                             bool on,
                                             PamojaBuffer **out_buffer);
PamojaStatus pamoja_modbus_write_single_register(uint8_t address,
                                                 uint16_t register_,
                                                 uint16_t value,
                                                 PamojaBuffer **out_buffer);
PamojaStatus pamoja_modbus_write_multiple_registers(uint8_t address,
                                                    uint16_t start,
                                                    const uint16_t *values,
                                                    uintptr_t count,
                                                    PamojaBuffer **out_buffer);
PamojaStatus pamoja_modbus_write_multiple_coils(uint8_t address,
                                                uint16_t start,
                                                const uint8_t *values,
                                                uintptr_t count,
                                                PamojaBuffer **out_buffer);
PamojaStatus pamoja_modbus_raw(uint8_t address,
                               uint8_t function,
                               const uint8_t *data,
                               uintptr_t data_len,
                               PamojaBuffer **out_buffer);
PamojaStatus pamoja_modbus_frame_parse(const uint8_t *bytes,
                                       uintptr_t bytes_len,
                                       PamojaModbusFrame **out_frame);
uint8_t pamoja_modbus_frame_address(const PamojaModbusFrame *frame);
uint8_t pamoja_modbus_frame_function(const PamojaModbusFrame *frame);
uint8_t pamoja_modbus_frame_exception(const PamojaModbusFrame *frame);
const uint8_t *pamoja_modbus_frame_pdu(const PamojaModbusFrame *frame);
uintptr_t pamoja_modbus_frame_pdu_len(const PamojaModbusFrame *frame);
PamojaStatus pamoja_modbus_frame_registers(const PamojaModbusFrame *frame,
                                           PamojaRegisters **out_registers);
PamojaStatus pamoja_modbus_frame_coils(const PamojaModbusFrame *frame,
                                       uint16_t count,
                                       PamojaBuffer **out_buffer);
void pamoja_modbus_frame_free(PamojaModbusFrame *frame);
const uint16_t *pamoja_registers_data(const PamojaRegisters *registers);
uintptr_t pamoja_registers_len(const PamojaRegisters *registers);
void pamoja_registers_free(PamojaRegisters *registers);
PamojaStatus pamoja_serial_slip_encode(const uint8_t *payload,
                                       uintptr_t payload_len,
                                       PamojaBuffer **out_buffer);
PamojaStatus pamoja_serial_slip_decode(const uint8_t *frame,
                                       uintptr_t frame_len,
                                       PamojaBuffer **out_buffer);
PamojaStatus pamoja_serial_cobs_encode(const uint8_t *payload,
                                       uintptr_t payload_len,
                                       PamojaBuffer **out_buffer);
PamojaStatus pamoja_serial_cobs_decode(const uint8_t *frame,
                                       uintptr_t frame_len,
                                       PamojaBuffer **out_buffer);
uintptr_t pamoja_serial_slip_max_encoded_len(uintptr_t payload_len);
uintptr_t pamoja_serial_cobs_max_encoded_len(uintptr_t payload_len);
PamojaSlipDecoder *pamoja_slip_decoder_new(void);
PamojaStatus pamoja_slip_decoder_feed(PamojaSlipDecoder *decoder,
                                      const uint8_t *bytes,
                                      uintptr_t bytes_len,
                                      PamojaFrames **out_frames);
uint64_t pamoja_slip_decoder_discarded(const PamojaSlipDecoder *decoder);
void pamoja_slip_decoder_reset(PamojaSlipDecoder *decoder);
void pamoja_slip_decoder_free(PamojaSlipDecoder *decoder);
PamojaCobsDecoder *pamoja_cobs_decoder_new(void);
PamojaStatus pamoja_cobs_decoder_feed(PamojaCobsDecoder *decoder,
                                      const uint8_t *bytes,
                                      uintptr_t bytes_len,
                                      PamojaFrames **out_frames);
uint64_t pamoja_cobs_decoder_discarded(const PamojaCobsDecoder *decoder);
void pamoja_cobs_decoder_reset(PamojaCobsDecoder *decoder);
void pamoja_cobs_decoder_free(PamojaCobsDecoder *decoder);
uintptr_t pamoja_frames_count(const PamojaFrames *frames);
const uint8_t *pamoja_frames_data(const PamojaFrames *frames, uintptr_t index);
uintptr_t pamoja_frames_len(const PamojaFrames *frames, uintptr_t index);
void pamoja_frames_free(PamojaFrames *frames);