bindings/dotnet/src/Pamoja.Native/Interop/NativeMethods.FieldIO.cs

using System.Runtime.InteropServices;

namespace Pamoja.Native.Interop;

/// <summary>
/// The P/Invoke declarations for the field-I/O capabilities of the pamoja C ABI -
/// serial framing, Modbus RTU, CAN, and on-board bus addressing - mirroring
/// <c>pamoja.h</c> one-to-one.
/// </summary>
/// <remarks>
/// Split from the other declarations only to keep each file readable; this is the
/// same <see cref="NativeMethods"/> class and the same low-level escape hatch.
/// Every part must be updated together with the generated header.
/// </remarks>
public static partial class NativeMethods
{
    /// <summary>Frames a payload as a SLIP packet (RFC 1055).</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_serial_slip_encode(
        ReadOnlySpan<byte> payload,
        nuint payloadLen,
        out IntPtr outBuffer);

    /// <summary>Reads the payload back out of a SLIP frame.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_serial_slip_decode(
        ReadOnlySpan<byte> frame,
        nuint frameLen,
        out IntPtr outBuffer);

    /// <summary>Frames a payload as a COBS packet.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_serial_cobs_encode(
        ReadOnlySpan<byte> payload,
        nuint payloadLen,
        out IntPtr outBuffer);

    /// <summary>Reads the payload back out of a COBS frame.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_serial_cobs_decode(
        ReadOnlySpan<byte> frame,
        nuint frameLen,
        out IntPtr outBuffer);

    /// <summary>Returns the largest SLIP frame a payload of this length can produce.</summary>
    [LibraryImport(Library)]
    public static partial nuint pamoja_serial_slip_max_encoded_len(nuint payloadLen);

    /// <summary>Returns the largest COBS frame a payload of this length can produce.</summary>
    [LibraryImport(Library)]
    public static partial nuint pamoja_serial_cobs_max_encoded_len(nuint payloadLen);

    /// <summary>Creates a streaming SLIP decoder.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_slip_decoder_new();

    /// <summary>Feeds a chunk of the byte stream to a SLIP decoder.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_slip_decoder_feed(
        IntPtr decoder,
        ReadOnlySpan<byte> bytes,
        nuint bytesLen,
        out IntPtr outFrames);

    /// <summary>Returns how many corrupt frames a SLIP decoder has discarded.</summary>
    [LibraryImport(Library)]
    public static partial ulong pamoja_slip_decoder_discarded(IntPtr decoder);

    /// <summary>Discards any partly assembled SLIP frame.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_slip_decoder_reset(IntPtr decoder);

    /// <summary>Releases a SLIP decoder handle. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_slip_decoder_free(IntPtr decoder);

    /// <summary>Creates a streaming COBS decoder.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_cobs_decoder_new();

    /// <summary>Feeds a chunk of the byte stream to a COBS decoder.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_cobs_decoder_feed(
        IntPtr decoder,
        ReadOnlySpan<byte> bytes,
        nuint bytesLen,
        out IntPtr outFrames);

    /// <summary>Returns how many corrupt frames a COBS decoder has discarded.</summary>
    [LibraryImport(Library)]
    public static partial ulong pamoja_cobs_decoder_discarded(IntPtr decoder);

    /// <summary>Discards any partly assembled COBS frame.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_cobs_decoder_reset(IntPtr decoder);

    /// <summary>Releases a COBS decoder handle. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_cobs_decoder_free(IntPtr decoder);

    /// <summary>Returns how many frames a decoder call produced.</summary>
    [LibraryImport(Library)]
    public static partial nuint pamoja_frames_count(IntPtr frames);

    /// <summary>Returns a pointer to one frame's payload bytes.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_frames_data(IntPtr frames, nuint index);

    /// <summary>Returns the length in bytes of one frame's payload.</summary>
    [LibraryImport(Library)]
    public static partial nuint pamoja_frames_len(IntPtr frames, nuint index);

    /// <summary>Releases a decoded frame set. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_frames_free(IntPtr frames);

    /// <summary>Computes the CRC-16/MODBUS that every RTU frame ends with.</summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_modbus_crc16(ReadOnlySpan<byte> bytes, nuint bytesLen);

    /// <summary>Builds a read-coils request frame (function 0x01).</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_modbus_read_coils(
        byte address,
        ushort start,
        ushort count,
        out IntPtr outBuffer);

    /// <summary>Builds a read-discrete-inputs request frame (function 0x02).</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_modbus_read_discrete_inputs(
        byte address,
        ushort start,
        ushort count,
        out IntPtr outBuffer);

    /// <summary>Builds a read-holding-registers request frame (function 0x03).</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_modbus_read_holding_registers(
        byte address,
        ushort start,
        ushort count,
        out IntPtr outBuffer);

    /// <summary>Builds a read-input-registers request frame (function 0x04).</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_modbus_read_input_registers(
        byte address,
        ushort start,
        ushort count,
        out IntPtr outBuffer);

    /// <summary>Builds the reply to a read-holding-registers request.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_modbus_read_holding_registers_reply(
        byte address,
        ReadOnlySpan<ushort> values,
        nuint valuesLen,
        out IntPtr outBuffer);

    /// <summary>Builds the reply to a read-input-registers request.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_modbus_read_input_registers_reply(
        byte address,
        ReadOnlySpan<ushort> values,
        nuint valuesLen,
        out IntPtr outBuffer);

    /// <summary>Builds a write-single-coil request frame (function 0x05).</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_modbus_write_single_coil(
        byte address,
        ushort coil,
        [MarshalAs(UnmanagedType.U1)] bool on,
        out IntPtr outBuffer);

    /// <summary>Builds a write-single-register request frame (function 0x06).</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_modbus_write_single_register(
        byte address,
        ushort register,
        ushort value,
        out IntPtr outBuffer);

    /// <summary>Builds a write-multiple-registers request frame (function 0x10).</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_modbus_write_multiple_registers(
        byte address,
        ushort start,
        ReadOnlySpan<ushort> values,
        nuint count,
        out IntPtr outBuffer);

    /// <summary>Builds a write-multiple-coils request frame (function 0x0F).</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_modbus_write_multiple_coils(
        byte address,
        ushort start,
        ReadOnlySpan<byte> values,
        nuint count,
        out IntPtr outBuffer);

    /// <summary>Builds a request frame from a raw function code and data.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_modbus_raw(
        byte address,
        byte function,
        ReadOnlySpan<byte> data,
        nuint dataLen,
        out IntPtr outBuffer);

    /// <summary>Parses a received RTU frame, verifying its CRC.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_modbus_frame_parse(
        ReadOnlySpan<byte> bytes,
        nuint bytesLen,
        out IntPtr outFrame);

    /// <summary>Returns the unit address a frame is addressed to or came from.</summary>
    [LibraryImport(Library)]
    public static partial byte pamoja_modbus_frame_address(IntPtr frame);

    /// <summary>Returns a frame's function code as it appeared on the wire.</summary>
    [LibraryImport(Library)]
    public static partial byte pamoja_modbus_frame_function(IntPtr frame);

    /// <summary>Returns the exception code a device reported, or 0 for none.</summary>
    [LibraryImport(Library)]
    public static partial byte pamoja_modbus_frame_exception(IntPtr frame);

    /// <summary>Returns a pointer to a frame's PDU.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_modbus_frame_pdu(IntPtr frame);

    /// <summary>Returns the length in bytes of a frame's PDU.</summary>
    [LibraryImport(Library)]
    public static partial nuint pamoja_modbus_frame_pdu_len(IntPtr frame);

    /// <summary>Reads the 16-bit registers out of a read-registers response.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_modbus_frame_registers(
        IntPtr frame,
        out IntPtr outRegisters);

    /// <summary>Reads the coils out of a read-bits response, one byte per coil.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_modbus_frame_coils(
        IntPtr frame,
        ushort count,
        out IntPtr outBuffer);

    /// <summary>Releases a parsed frame handle. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_modbus_frame_free(IntPtr frame);

    /// <summary>Returns a pointer to the registers a device returned.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_registers_data(IntPtr registers);

    /// <summary>Returns how many registers a device returned.</summary>
    [LibraryImport(Library)]
    public static partial nuint pamoja_registers_len(IntPtr registers);

    /// <summary>Releases a register series. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_registers_free(IntPtr registers);

    /// <summary>Builds a classic CAN 2.0 frame.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_can_frame_new(
        uint id,
        [MarshalAs(UnmanagedType.U1)] bool extended,
        ReadOnlySpan<byte> data,
        nuint dataLen,
        out IntPtr outFrame);

    /// <summary>Builds a CAN-FD frame.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_can_frame_fd(
        uint id,
        [MarshalAs(UnmanagedType.U1)] bool extended,
        ReadOnlySpan<byte> data,
        nuint dataLen,
        out IntPtr outFrame);

    /// <summary>Builds a remote transmission request.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_can_frame_remote(
        uint id,
        [MarshalAs(UnmanagedType.U1)] bool extended,
        nuint len,
        out IntPtr outFrame);

    /// <summary>Returns a frame's identifier.</summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_can_frame_id(IntPtr frame);

    /// <summary>Reports whether a frame carries a 29-bit extended identifier.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_can_frame_is_extended(IntPtr frame);
